fix(material-experimental/mdc-form-filed): missing focus and hover effect for fill
We recently updated to the latest canary version of MDC, but did not
account for a new breaking change to the MDC text-field that required
us to explicitly specify a `ripple` container element.

https://github.com/material-components/material-components-web/commit/c541ebe157a66e8d2e881fad16cc4dbe30b2c16b#diff-fa38508bb43a471ee25b746d85527fb5

Thinking more about the ripple styles in the MDC text-field unveiled
that we should just provide our own implementation of the focus overlay
since MDC ripples are too much bloat for the simple case of showing
a focus and hover effect. We don't want to create a `MdcRipple` runtime
instance, nor do we want to include CSS selectors for interaction
ripples which are not used in the text-field at all.

--- a/src/material-experimental/mdc-form-field/_mdc-form-field.scss
+++ b/src/material-experimental/mdc-form-field/_mdc-form-field.scss
@@ -5,6 +5,7 @@
 @import '../mdc-helpers/mdc-helpers';
 @import 'form-field-subscript';
 @import 'form-field-bottom-line';
+@import 'form-field-focus-overlay';
 @import 'mdc-text-field-theme-variable-refresh';
 
 // Mixin that overwrites the default MDC text-field color styles to be based on
@@ -34,12 +35,13 @@
 @mixin mat-form-field-theme-mdc($theme) {
   @include mat-using-mdc-theme($theme) {
     @include _mdc-text-field-refresh-theme-variables() {
-      @include mdc-text-field-core-styles($query: $mat-theme-styles-query);
+      @include mdc-text-field-without-ripple($query: $mat-theme-styles-query);
       @include mdc-floating-label-core-styles($query: $mat-theme-styles-query);
       @include mdc-notched-outline-core-styles($query: $mat-base-styles-query);
       @include mdc-line-ripple-core-styles($query: $mat-theme-styles-query);
       @include _mat-form-field-subscript-theme();
       @include _mat-form-field-bottom-line-theme();
+      @include _mat-form-field-focus-overlay-theme();
 
       .mat-mdc-form-field.mat-accent {
         @include _mdc-text-field-color-styles(secondary);
@@ -48,25 +50,13 @@
       .mat-mdc-form-field.mat-warn {
         @include _mdc-text-field-color-styles(error);
       }
-
-      // MDC text-field intends to hide the ripples in the outline appearance. The styles for
-      // this collide with other styles from the structure styles. This is because the ripples
-      // are made invisible by using the `mdc-ripple.states-base-color` mixin. The mixin makes the
-      // ripples `transparent` by generating `content: none` instead. This means that the style
-      // will collide with the default `content` for ripple pseudo elements. Depending on how
-      // themes and component styles are inserted, the ripples will not hide properly. To ensure
-      // that the ripples are not rendered in the outline appearance, we copy the mixin call but
-      // increase the specificity.
-      .mat-mdc-text-field-wrapper.mdc-text-field--outlined {
-        @include mdc-ripple.states-base-color(transparent);
-      }
     }
   }
 }
 
 @mixin mat-form-field-typography-mdc($config) {
   @include mat-using-mdc-typography($config) {
-    @include mdc-text-field-core-styles($query: $mat-typography-styles-query);
+    @include mdc-text-field-without-ripple($query: $mat-typography-styles-query);
     @include mdc-floating-label-core-styles($query: $mat-typography-styles-query);
     @include mdc-text-field-core-styles($query: $mat-typography-styles-query);
     @include _mat-form-field-subscript-typography($config);
