--- a/src/material-experimental/mdc-form-field/form-field.scss
+++ b/src/material-experimental/mdc-form-field/form-field.scss
@@ -3,22 +3,24 @@
 @import 'form-field-sizing';
 @import 'form-field-subscript';
 @import 'form-field-bottom-line';
+@import 'form-field-focus-overlay';
 @import 'mdc-text-field-textarea-overrides';
 @import 'mdc-text-field-structure-overrides';
 
-// Base styles for MDC notched-outline, MDC floating label and MDC text-field.
+// Base styles for MDC text-field, notched-outline, floating label and line-ripple.
+@include mdc-text-field-without-ripple($query: $mat-base-styles-without-animation-query);
 @include mdc-notched-outline-core-styles($query: $mat-base-styles-without-animation-query);
 @include mdc-floating-label-core-styles($query: $mat-base-styles-without-animation-query);
-@include mdc-text-field-core-styles($query: $mat-base-styles-without-animation-query);
 @include mdc-line-ripple-core-styles($query: $mat-base-styles-without-animation-query);
 
 // MDC text-field overwrites.
 @include _mat-mdc-text-field-textarea-overrides();
 @include _mat-mdc-text-field-structure-overrides();
 
-// Include the subscript and bottom-line styles.
+// Include the subscript, bottom-line and focus-overlay styles.
 @include _mat-form-field-subscript();
 @include _mat-form-field-bottom-line();
+@include _mat-form-field-focus-overlay();
 
 // Host element of the form-field. It contains the mdc-text-field wrapper
 // and the subscript wrapper.
@@ -57,8 +59,8 @@
 // In order to make it possible for developers to disable animations for form-fields,
 // we only activate the animation styles if animations are not explicitly disabled.
 .mat-mdc-form-field:not(.mat-form-field-no-animations) {
+  @include mdc-text-field-without-ripple($query: animation);
   @include mdc-notched-outline-core-styles($query: animation);
   @include mdc-floating-label-core-styles($query: animation);
-  @include mdc-text-field-core-styles($query: animation);
   @include mdc-line-ripple-core-styles($query: animation);
 }
